--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -103,4 +103,10 @@ footer{
     #projects{
         margin-top: 100px;
     }
+    h2{
+        font-size: 2rem;
+    }
+    h3{
+        font-size: 1.5rem;
+    }
   }
